# hermes-maximem-vity

./: .gitignore  LICENSE  README.md  __init__.py  after-install.md  cli.py  plugin.yaml  pyproject.toml  vity.json.example
.github/workflows/: ci.yml
src/hermes_maximem_vity/: __init__.py  installer.py
src/hermes_maximem_vity/payload/: after-install.md  cli.py  plugin.yaml  provider.py  vity.json.example
tests/: conftest.py  test_cli.py  test_installer_sdk.py  test_vity_provider.py
