[build-system]
requires = ["setuptools>=61,<81", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-maximem-vity"
version = "1.0.0"
description = "Vity (Maximem AI) memory provider plugin for Hermes Agent"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Maximem AI", email = "hello@maximem.ai" }]
keywords = ["hermes", "hermes-agent", "memory", "vity", "maximem", "llm-memory", "semantic-memory"]
dependencies = [
    "maximem-vity-sdk>=0.2.1,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7,<9",
]

[project.urls]
Homepage = "https://maximem.ai"
Documentation = "https://docs.maximem.ai/vity"
Repository = "https://github.com/maximem-ai/hermes-maximem-vity"

# `pip install hermes-maximem-vity` installs this console command; running
# `hermes-maximem-vity install` copies the plugin payload into
# ~/.hermes/plugins/vity/ where Hermes auto-discovers it.
[project.scripts]
hermes-maximem-vity = "hermes_maximem_vity.installer:main"

[tool.setuptools.packages.find]
where = ["src"]

# The plugin files are shipped as data (not imported by this package — they
# import Hermes host modules and only run inside the Hermes process).
[tool.setuptools.package-data]
hermes_maximem_vity = ["payload/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
